# osml-imagery-io

./: .gitignore  .mise.toml  Cargo.toml  README.md  RELEASING.md  SECURITY.md  build.rs  clippy.toml  deny.toml  environment.yml  pyproject.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml
.kiro/hooks/: cargo-deny-check.json  complexity-review.json  unused-deps-check.json
.kiro/specs/: .gitignore
.kiro/steering/: docs.md  product.md  reference-materials.md  specifications.md  structure.md  tech.md
benches/: decode_benchmarks.rs  nc_decode.rs
benches/decode_benchmarks/: common.rs  mod.rs
data/benchmark/: README.md
data/integration/: README.md
data/unit/: dted-16x16-1band-int16.dt1  multi_segment.ntf  nitf21-256x256-3band-8bit-nc.ntf  nitf21-64x64-3band-8bit-j2k.ntf  nitf21-64x64-3band-8bit-jpeg.ntf  nitf21-8x8-1band-8bit-nc.ntf  nitf21-multisegment-2img-1txt-1des.ntf  nsif10-8x8-1band-8bit-nc.nsif  sample_nitf21.ntf  sample_nsif10.nsif  small.tif  test_j2k.ntf  tiff-256x256-1band-8bit-tiled-deflate.tif
docs/: API_DESIGN.md  Makefile  _benchmark_results.md  conf.py  getting-started.md  index.md  performance.md
docs/api/: assets.md  convenience.md  index.md  io.md  jbp-utils.md  metadata.md  multi-reference-fs.md  parser.md  reader.md  types.md  virtualizarr-parsers.md  writer.md  zarr-codecs.md
docs/codecs/: dted.md  index.md  jbp-block.md  jpeg.md  jpeg2000.md  tiff-tile.md
docs/design/: api-design.md  index.md  native-library-ffi.md  parser-design.md  property-testing.md  zarr-codec-design.md
docs/internal/: .gitignore  BUG_BLOCK_SHAPE.md  BUG_EXTRA_NITF_J2K_PARAMETERS.md  BUG_J2K_FULL_IMAGE_BLOCK.md  BUG_MASKED_J2K_INCOMPLETE.md  DATASET_WRITER_HINTS.md  JBP_CLEVEL_ASSESSMENT.md  PARSER_SUGGESTIONS.md  STRUCTURES_LIMITATIONS.md  TODO_FUNCTIONAL_TESTS.md
docs/roadmap/: cog.md  image-pyramid.md  index.md  jbp.md  possible-extensions.md  tiff.md
docs/user-guide/: data-assets.md  datasets-and-io.md  getting-started.md  graphics-assets.md  image-assets-writing.md  image-assets.md  index.md  introduction.md  metadata.md  quick-start.md  text-assets.md  working-with-pixels.md  zarr-codecs.md
proptest-regressions/j2k/: markers.txt
proptest-regressions/jbp/: asset.txt  metadata.txt  reader.txt  tre_fields.txt  types.txt  writer.txt
proptest-regressions/parser/: definition.txt  expression.txt  value.txt  writer.txt
proptest-regressions/tiff/: writer.txt
reference-materials/: README.md
scripts/: README.md  chip_image.py  chip_image_local.py  chip_image_zarr.py  describe_dataset.py  generate_benchmark_data.py  generate_benchmark_report.py  generate_synthetic_image.py  generate_synthetic_image_pyramid.py  generate_test_data.py  generate_tile_index.py  setup-dev-env.sh  setup-rust-env.sh  survey_datasets.py  survey_images.py  test_zarr_read.py  uppercase_ksy_fields.py
specification/: README.md
src/: error.rs  lib.rs  memory_image.rs  owned_buffer.rs  simple_metadata.rs  types.rs
src/assembly/: DESIGN.md  mod.rs  pad.rs  tile_assembler.rs
src/bindings/: asset.rs  buffered_data.rs  buffered_image.rs  buffered_metadata.rs  buffered_text.rs  callback_provider.rs  codecs.rs  data.rs  graphics.rs  image.rs  io.rs  memory_image.rs  metadata.rs  mod.rs  parser.rs  reader.rs  simple_metadata.rs  stream.rs  text.rs  writer.rs
src/buffered/: data.rs  image.rs  metadata.rs  mod.rs  text.rs
src/composite/: mod.rs  reader.rs  wrapper.rs  writer.rs
src/dted/: image.rs  metadata.rs  mod.rs  reader.rs  records.rs  writer.rs
src/j2k/: codec.rs  comrat.rs  ffi.rs  image.rs  markers.rs  metadata.rs  mod.rs  openjpeg.rs  reader.rs  sys.rs  writer.rs
src/jbp/: asset.rs  datetime.rs  error.rs  format.rs  io.rs  metadata.rs  mod.rs  overflow.rs  reader.rs  test_data_generator.rs  tre.rs  tre_fields.rs  types.rs  writer.rs
src/jpeg/: comrat.rs  ffi.rs  image.rs  metadata.rs  mod.rs  reader.rs  sys.rs  writer.rs
src/parser/: builtins.rs  definition.rs  encoding.rs  error.rs  mod.rs  registry.rs  types.rs  value.rs
src/png/: image.rs  metadata.rs  mod.rs  reader.rs  writer.rs
src/tiff/: ffi.rs  geotiff.rs  image.rs  metadata.rs  mod.rs  reader.rs  sys.rs  tags.rs  writer.rs
src/traits/: asset.rs  data.rs  graphics.rs  image.rs  metadata.rs  mod.rs  reader.rs  text.rs  writer.rs
tests/: test_api_design_alignment_pbt.py  test_generate_benchmark_data.py  test_image_asset_provider.py  test_j2k_compression.py  test_jbp_integration.py  test_jbp_io.py  test_jbp_reader.py  test_jbp_writer.py  test_jpeg_compression.py  test_memory_image_provider.py  test_multi_reference_fs.py  test_parser.py  test_simple_metadata_provider.py  test_tag_resolver.py  test_tiff_geotiff_integration.py  test_tiff_reader.py  test_tile_index.py  test_tile_index_multi_range.py  test_zarr_codecs.py
tests/benchmark/: __init__.py  conftest.py  test_bench_block_read.py  test_bench_dted.py  test_bench_index_gen.py  test_bench_metadata.py  test_bench_zarr_read.py  test_conftest_helpers.py  test_memory_usage.py
tests/conformance/: __init__.py  test_conformance.py  test_image_conformance.py  test_manifest.py
tests/integration/: __init__.py  conftest.py  test_integration.py
tests/property/: __init__.py  conftest.py  helpers.py  quality.py  strategies.py  test_api_contracts.py  test_callback_provider.py  test_convenience.py  test_geotiff_roundtrip.py  test_graphics.py  test_image_blocks.py  test_image_metadata.py  test_image_roundtrip.py  test_io_contracts.py  test_jpeg_roundtrip.py  test_masking.py  test_metadata_mapping.py  test_roundtrip.py  test_strategies.py  test_stream_io.py  test_text_roundtrip.py  test_tiff_api.py  test_tiff_roundtrip.py  test_tiff_write_roundtrip.py  test_tile_assembly.py  test_tile_byte_ranges.py  test_writer_contracts.py
tests/unit/: test_bandsb_parsing.py  test_build_codec_instance_tiff.py  test_callback_provider.py  test_convenience.py  test_data_asset_validation.py  test_dted_codec.py  test_jbp_metadata_utils.py  test_memory_image_provider.py  test_multi_path_io.py  test_parser.py  (+10 more)
(+305 files in other folders)
