[package]
name = "aws-osml-io"
version = "0.1.0"
edition = "2021"
description = "Geospatial image format codecs (NITF, GeoTIFF) for the OversightML ecosystem"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/aws-solutions-library-samples/osml-io"
keywords = ["geospatial", "nitf", "geotiff", "imagery", "remote-sensing"]
categories = ["multimedia::images", "science::geo"]

[lib]
name = "_io"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
