[package]
name = "osml-imagery-io"
version = "0.1.3"
edition = "2021"
description = "Geospatial image format codecs (NITF, GeoTIFF) for the OversightML ecosystem"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/awslabs/osml-imagery-io"
keywords = ["geospatial", "nitf", "geotiff", "imagery", "remote-sensing"]
categories = ["multimedia::images", "science::geo"]

[lib]
name = "_io"
crate-type = ["cdylib", "rlib"]

[features]
default = ["openjpeg", "libjpeg-turbo", "libtiff"]
# extension-module is required for building as a Python extension
# but must be disabled for running Rust tests
extension-module = ["pyo3/extension-module"]
# Enable OpenJPEG-based JPEG 2000 codec (requires libopenjp2)
openjpeg = []
# Enable libjpeg-turbo-based JPEG DCT codec (requires libjpeg-turbo)
libjpeg-turbo = []
# Enable libtiff-based TIFF codec (requires libtiff)
libtiff = []
# Enable static linking of native C libraries (used in CI release builds)
static = []

[dependencies]
pyo3 = { version = "0.29", features = ["auto-initialize", "abi3-py39"] }
numpy = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
memmap2 = "0.9"
png = "0.18"
rayon = "1"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
proptest = "1.4"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decode_benchmarks"
harness = false
