[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "aws-osml-io"
version = "0.1.0"
description = "Geospatial image format codecs (NITF, GeoTIFF) for the OversightML ecosystem"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["geospatial", "nitf", "geotiff", "imagery", "remote-sensing", "osml"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "maturin>=1.7",
]

[project.urls]
Homepage = "https://github.com/aws-solutions-library-samples/osml-io"
Repository = "https://github.com/aws-solutions-library-samples/osml-io"
Documentation = "https://github.com/aws-solutions-library-samples/osml-io#readme"

[tool.maturin]
python-source = "python"
module-name = "aws.osml.io._io"
features = ["extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (requires test data in data/integration/)",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
