[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "osml-imagery-io"
version = "0.1.0"
description = "Geospatial image format codecs (NITF, GeoTIFF) for the OversightML ecosystem"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["geospatial", "nitf", "geotiff", "imagery", "remote-sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.7",
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
    "pyyaml>=6.0",
    "ruff>=0.1",
    "hypothesis>=6.0",
]

zarr = ["zarr>=3.0", "fsspec"]

docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-mermaid",
    "furo",
]

[project.urls]
Repository = "https://github.com/awslabs/osml-imagery-io"

[project.entry-points."zarr.codecs"]
"https://awslabs.github.io/osml-imagery-io/codecs/jpeg2000" = "aws.osml.io.zarr_codecs:Jpeg2000Codec"
"https://awslabs.github.io/osml-imagery-io/codecs/jpeg" = "aws.osml.io.zarr_codecs:JpegCodec"
"https://awslabs.github.io/osml-imagery-io/codecs/jbp-block" = "aws.osml.io.zarr_codecs:JbpBlockCodec"

[tool.maturin]
python-source = "python"
module-name = "aws.osml.io._io"
features = ["extension-module", "openjpeg", "libjpeg-turbo"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring integration data",
    "benchmark: marks benchmark tests",
    "property: marks property-based tests (run with pytest -m property)",
]
